Fix whitespace on hands-on

--- a/assets/css/_fonts.scss
+++ b/assets/css/_fonts.scss
@@ -19,7 +19,7 @@ h2, .h2 {
 }
 
 .truncate {
-  width: 360px;
+  width: 340px;
   display: inline-block;
   white-space: nowrap;
   overflow: hidden;
